# file-encryption-algorithm-comparison

./: CMakeLists.txt  README.md  constants.hpp  encrypter.cpp  openssl_error.cpp  proprietary.hpp  rand.cpp  rand.hpp  test_xcrypt.cpp
inc/aes256gcm/: aes256gcm.hpp  decrypter.hpp  encrypter.hpp  openssl_error.hpp  pbkdf2.hpp
lib/aes256gcm/: decrypter.cpp  pbkdf2.cpp
lib/aes256gcm/proprietary/: decrypt_file.cpp  decrypt_file_inplace.cpp  encrypt_file.cpp  encrypt_file_inplace.cpp  encryption_info.cpp  encryption_info.hpp  get_encryption_info.cpp  memmapped_file.cpp  memmapped_file.hpp
src/: main.cpp
test-src/: test_pbkdf2.cpp
